# thinkfan-tui

./: CHANGELOG.md  Cargo.toml  README.md  demo.tape
.github/workflows/: musl-build.yml
src/: main.rs
testdata/: sensors-t14s  sensors-t14s-amd-gen4  sensors-t490
